<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <com.estes.megajoltandroid.guages.GuagesView
            android:id="@+id/RPM"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtViewDigital1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/test_text"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <com.estes.megajoltandroid.guages.GuagesView
            android:id="@+id/Advance"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.6"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtViewDigital2"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.2"
            android:background="@android:color/black"
            android:gravity="center_horizontal|top"
            android:text="@string/test_text"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtViewShiftLight"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:gravity="left|top"
                android:text="@string/shift_text"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtViewRevLight"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:gravity="right|top"
                android:text="@string/rev_text"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <com.estes.megajoltandroid.guages.IndicatorLED
                android:id="@+id/LED1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.estes.megajoltandroid.guages.IndicatorLED
                android:id="@+id/LED2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.estes.megajoltandroid.guages.IndicatorLED
                android:id="@+id/LED3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.estes.megajoltandroid.guages.IndicatorLED
                android:id="@+id/LED4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <com.estes.megajoltandroid.guages.GuagesView
            android:id="@+id/Load"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/txtViewDigital3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/test_text"
            android:textSize="40sp" />
    </LinearLayout>

</LinearLayout>